# payments_api_study

./: README.md  app.py  pyproject.toml
connections/: database.py
db_models/: payment.py
payments/: pix.py
templates/: 404.html  confirmed_payment.html  payment.html
tests/: test_pix.py
