[tool.poetry]
name = "payments-api-study"
version = "0.1.0"
description = "A flask payments API study"
authors = ["Vinícius"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "2.3.0"
qrcode = "7.4.2"
pillow = "10.2.0"
flask-socketio = "5.3.6"
flask-sqlalchemy = "3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
